# TheAudioPlayer95

./: Cargo.toml  README.md  package-lock.json  package.json  vite.config.ts
The Audio Player/: package-lock.json  package.json  vite.config.ts
The Audio Player/src/: App.tsx
The Audio Player/src-tauri/: Cargo.toml  tauri.conf.json
The Audio Player/src-tauri/src/: main.rs  output.rs  player.rs
src/: App.tsx  main.rs  ui.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  player.rs
