[package]
name = "the-audio-player"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[[bin]]
name = "the-audio-player"
path = "src/main.rs"  

[dependencies]
tauri = { version = "1.0", features = ["shell-all", "fs-all"] }
symphonia = { version = "0.5.4", features = ["aac", "flac", "mp3", "vorbis", "wav"] }
cpal = "0.15.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[package.metadata.tauri]

[features]
custom-protocol = ["tauri/custom-protocol"]
