[package]
name = "the-audio-player"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[dependencies]
tauri = { version = "1.0", features = [ "fs-all", "shell-all"] }
symphonia = { version = "0.5.4", features = ["aac", "flac", "mp3", "vorbis", "wav"] }
cpal = "0.13"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
